xlsx service created

--- a/src/app/components/beginner/beginner.component.html
+++ b/src/app/components/beginner/beginner.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="mb-3  col-md-8">
             <label for="formFile" class="form-label">Upload Excel</label>
-            <input class="form-control" type="file" id="formFile" (change)="addFile($event)" accept=".csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
+            <input class="form-control" type="file" id="formFile" (change)="readFile($event)" accept=".csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
           </div>
     </div>
     
