--- a/src/app/components/beginner/beginner.component.html
+++ b/src/app/components/beginner/beginner.component.html
@@ -17,6 +17,6 @@
     </div>
     
     <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-success mx-auto">Generate!</button>
+        <button class="btn btn-success mx-auto" (click)="generateLatter()">Generate!</button>
       </div>
 </div>
