--- a/src/app/components/beginner/beginner.component.html
+++ b/src/app/components/beginner/beginner.component.html
@@ -3,12 +3,12 @@
     <div class="row">
         <div class="col-md-8">
             <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <textarea class="form-control" [(ngModel)]="text" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
                 <label for="floatingTextarea2">Text</label>
               </div>
         </div>
         <div class="col-md-4" style="border: 2px solid gray;">
-            <h1>loader</h1>
+            <h1>{{text}}</h1>
         </div>
         <div class="mb-3  col-md-8">
             <label for="formFile" class="form-label">Upload Excel</label>
