--- a/src/app/components/beginner/beginner.component.html
+++ b/src/app/components/beginner/beginner.component.html
@@ -2,6 +2,7 @@
 <div class="container p-1">
     <div class="row">
         <div class="col-md-8">
+            <application-form></application-form>
             <div class="form-floating">
                 <textarea class="form-control" [(ngModel)]="text" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
                 <label for="floatingTextarea2">Text</label>
@@ -17,6 +18,6 @@
     </div>
     
     <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-success mx-auto" (click)="generateLatter()">Generate!</button>
+        <button class="btn btn-success mx-auto" (click)="generateLetter()">Generate!</button>
       </div>
 </div>
